--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -189,7 +189,7 @@ For participants recruited in Wenzhou University, they finished the experiment i
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
 
-We reported all the measurements, analysis and results in all the experiments in the current study. All data were first pre-processed using R R (Version 3.6.0; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.23.0; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.22; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.2; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.0.1; Wickham et al., 2019), \emph{emmeans} (Version 1.3.4; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggplot2} (Version 3.1.1; Wickham, 2016), \emph{ggstatsplot} (Version 0.0.10; Patil \& Powell, 2018), \emph{Hmisc} (Version 4.2.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.4.3; Kelley, 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.10; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.2; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 2.44.1.1; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.2.1; Wickham, 2017). The clean data were analyzed using JASP (0.8.6.0, www.jasp-stats.org, (Love et al., 2019)). Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
+We reported all the measurements, analysis and results in all the experiments in the current study. All data were first pre-processed using R R (Version 3.6.0; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.23.0; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.22; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.2; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.0.1; Wickham et al., 2019), \emph{emmeans} (Version 1.3.4; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.1; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.1.1; Wickham, 2016), \emph{ggstance} (Version 0.3.1; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Version 0.0.10; Patil \& Powell, 2018), \emph{Hmisc} (Version 4.2.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.4.3; Kelley, 2018), \emph{mosaic} (Version 1.5.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.17.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.10; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.2; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 2.44.1.1; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.2.1; Wickham, 2017). The clean data were analyzed using JASP (0.8.6.0, www.jasp-stats.org, (Love et al., 2019)). Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
 We analyzed accuracy performance using a signal detection approach, as in Sui et al.~(2012). The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of d'. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The d' were then analyzed using repeated measures analyses of variance (repeated measures ANOVA).
 
@@ -202,10 +202,36 @@ To assess the individual difference, we explored correlation between self-report
 \hypertarget{experiment-1a}{%
 \section{Experiment 1a}\label{experiment-1a}}
 
-\hypertarget{participants}{%
-\subsection{Participants}\label{participants}}
+\hypertarget{methods}{%
+\subsection{Methods}\label{methods}}
 
-57 college students (38 female, age = 20.75 \(\pm\) 2.54 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 18 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 6 participant's data were excluded from analysis because nearly random level of accuracy (4 participants from the Tsinghua sample and 2 from the Wenzhou sample), leaving 46 participants (30 female, age = 20.63 \(\pm\) 2.49 years).
+\hypertarget{participants}{%
+\subsubsection{Participants}\label{participants}}
+
+57 college students (38 female, age = 20.75 \(\pm\) 2.54 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 18 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 1 participant's data were excluded from analysis because nearly random level of accuracy, leaving 46 participants (30 female, age = 20.63 \(\pm\) 2.49 years).
+
+\hypertarget{stimuli-and-tasks}{%
+\subsubsection{Stimuli and Tasks}\label{stimuli-and-tasks}}
+
+Three geometric shapes were used in this experiment: triangle, square, and circle. These shapes were paired with three labels (bad person, good person or neutral person). The pairs were counterbalanced across participants.
+
+\hypertarget{procedure}{%
+\subsubsection{Procedure}\label{procedure}}
+
+As we describe in general method part, this experiment had two phases. First, there was a learning stage. Participants were asked to learn the relationship between geometric shapes (triangle, square, and circle) and different person (bad person, a good person, or a neutral person). For example, a participant was told, \enquote{bad person is a circle; good person is a triangle; and a neutral person is represented by a square.} After participant remember the associations (usually in a few minutes), participants started a practicing phase of matching task which has the exact task as in the experimental task.
+In the experimental task, participants judged whether shape--label pairs, which were subsequently presented, were correct. Each trial started with the presentation of a central fixation cross for 500 ms. Subsequently, a pairing of a shape and label (good person, bad person, and neutral person) was presented for 100 ms. The pair presented could confirm to the verbal instruction for each pairing given in the training stage, or it could be a recombination of a shape with a different label, with the shape--label pairings being generated at random. The next frame showed a blank for 1100ms. Participants were expected to judge whether the shape was correctly assigned to the person by pressing one of the two response buttons as quickly and accurately as possible within this timeframe (to encourage immediate responding). Feedback (correct or incorrect) was given on the screen for 500 ms at the end of each trial, if no response detected, \enquote{too slow} was presented to remind participants to accelerate. Participants were informed of their overall accuracy at the end of each block. The practice phase finished and the experimental task began after the overall performance of accuracy during practice phase achieved 60\%.
+For pariticpants from the Tsinghua community, they completed 6 experimental blocks of 60 trials. Thus, there were 60 trials in each condition (bad-person matched, bad-person nonmatching, good-person matched, good-person nonmatching, neutral-person matched, and neutral-person nonmatching). For the participants from Wenzhou Univeristy, they finished 6 blocks of 120 trials, therefore, 120 trials for each condition.
+
+\hypertarget{questionnaires}{%
+\subsubsection{Questionnaires}\label{questionnaires}}
+
+After the experiment, part of the participants in Tsinghua University also finished psychological distance, trait social justice (Bai, 2013), cognitive reflection test (Frederick, 2005), and disgust senstivity (Tan, Cong, \& Lu, 2007). The psychological distance measurement finished by indicating the the psychological distance between self, good person, bad person and neutral person, through two points on a horizontal line. This procedure is presented by Matlab. This method had been proven been an effective way to measure the psychological distance (Enock, Sui, Hewstone, \& Humphreys, 2018).
+For all participants from Wenzhou University, they finished following questionnaires online immediately after the experiment: objective and subjective socioeconomic status (the objective SES measured by parents' education and occupation (Shi \& Shen, 2007), the subjective SES measured by ladder task (Ostrove, Adler, Kuppermann, \& Washington, 2000)), psychological distance (Enock et al., 2018), sensitivity to justice (Wu et al., 2014), cognitive reflection test (Frederick, 2005), disgust senstivity scale (Tan et al., 2007), belief in just world (short) (Wu et al., 2011), a short version of big five personality (John \& Srivastava, 1999), trait self-esteem (Rosenberg, 1965), locus of control (Levenson，1981), Free will and determinism plus (FAD+) (translated version) (Liu, Jian, Hu, \& Peng, 2015; Paulhus \& Carey, 2010), moral identity (Aquino \& Reed II, 2002), and moral self image (translated version) (Jordan, Leliveld, \& Tenbrunsel, 2015). Only the psychological distance data were analyized in the current study.
+
+\hypertarget{data-analysis-1}{%
+\subsubsection{Data analysis}\label{data-analysis-1}}
+
+As we describe in the general method section.
 
 \hypertarget{results}{%
 \subsection{Results}\label{results}}
@@ -213,9 +239,9 @@ To assess the individual difference, we explored correlation between self-report
 \hypertarget{analaysis-of-d-prime.}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.}}
 
-We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
+We conducted a single factor (morlaity: good, neutral, bad) repeated measure ANOVA:
 
-We found the effect of Valence (\(F(2, 100) = 6.19\), \(\mathit{MSE} = 0.26\), \(p = .003\), \(\hat{\eta}^2_G = .020\)).
+We found the effect of Valence (\(F(2, 90) = 5.51\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .020\)).
 
 \begin{table}[tbp]
 \begin{center}
@@ -225,7 +251,7 @@ We found the effect of Valence (\(F(2, 100) = 6.19\), \(\mathit{MSE} = 0.26\), \
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
 \midrule
-Valence & 6.19 & 2 & 100 & 0.26 & .003 & .020\\
+Valence & 5.51 & 2 & 90 & 0.26 & .006 & .020\\
 \bottomrule
 \addlinespace
 \end{tabular}
@@ -238,69 +264,88 @@ Valence & 6.19 & 2 & 100 & 0.26 & .003 & .020\\
 
 We further examined the effect of valence.
 
-contrast estimate SE df t.ratio p.value
-Good - Neutral 0.157 0.102 50 1.540 0.2814
-Good - Bad 0.357 0.108 50 3.304 0.0049
-Neutral - Bad 0.200 0.095 50 2.109 0.0982
-
-P value adjustment: tukey method for comparing a family of 3 estimates
+The Good condition (2.23 \(\pm\) 0.14) is great than Netural condition (2.05 \(\pm\) 0.16, t(45) = 1.67, p = 0.226) and bad condition (1.87 \(\pm\) 1.4, t(45) = 3.07, p = 0.01, Cohen'd = 0.36). This is no-significant difference between neutral and bad conidition, t(45) = 1.81, p = 1.77.
 
 \hypertarget{analaysis-of-reaction-time.}{%
 \subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
 
 We conducted 2 (Matchness: Match v. Mismatch) by 3 (Valence: good, neutral, bad) repeated measure ANOVA:
 
-We found the main effect of Matchness (\(F(1, 50) = 232.39\), \(\mathit{MSE} = 948.92\), \(p < .001\), \(\hat{\eta}^2_G = .104\)) and intercation between Matchness and Valence (\(F(1.73, 86.65) = 8.52\), \(\mathit{MSE} = 1,441.75\), \(p = .001\), \(\hat{\eta}^2_G = .011\))
+We found the main effect of Matchness (\(F(1, 45) = 190.77\), \(\mathit{MSE} = 1,006.59\), \(p < .001\), \(\hat{\eta}^2_G = .097\)), main effect of valence (\(F(1.79, 80.62) = 9.69\), \(\mathit{MSE} = 1,623.51\), \(p < .001\), \(\hat{\eta}^2_G = .016\)), and intercation between Matchness and Valence (\(F(1.64, 73.63) = 11.73\), \(\mathit{MSE} = 1,303.92\), \(p < .001\), \(\hat{\eta}^2_G = .014\))
 
-We carried out two separate ANOVA for both Match and mismatched trials.
+We carried out two separate ANOVA for both Match and mismatched trials. For matched trials, we found the effect of valence . For non-matched trials, there was no significant effect of Valence ().
 
-For matched trials, we found the effect of valence \(F(1.78, 89.24) = 10.52\), \(\mathit{MSE} = 2,693.58\), \(p < .001\), \(\hat{\eta}^2_G = .048\).
+We further examined the effect of valence for both self and other for mached trials. We found that shapes associated with Good Person responded faster than Neutral (t(45) = -2.662, p = 0.0284) and Bad Person (t(45) = -4.793, p = 0.0001). Neutral condition is slightly faster than bad condition (t(45) = -2.33, p = 0.0618)
 
-For non-matched trials, there was no significant effect of Valence (\(F(1.85, 92.57) = 0.96\), \(\mathit{MSE} = 439.94\), \(p = .381\), \(\hat{\eta}^2_G = .001\)).
+\hypertarget{experiment-1b}{%
+\section{Experiment 1b}\label{experiment-1b}}
 
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
-\begin{tabular}{lllllll}
-\toprule
-Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
-\midrule
-Valence & 10.52 & 1.78 & 89.24 & 2,693.58 & < .001 & .048\\
-\bottomrule
-\addlinespace
-\end{tabular}
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} Note that the column names contain beautiful mathematical copy: This is because the table has variable labels.}
-\end{tablenotes}
-\end{threeparttable}
-\end{center}
-\end{table}
+In this study, we aimed at excluding the potential confouding factor of the familarity of words we used in experiment 1a, by matching the familiarity of the words.
 
-We further examined the effect of valence for both self and other for mached trials.
-
-contrast estimate SE df t.ratio p.value
-Good - Neutral -24.6 10.88 50 -2.265 0.0702
-Good - Bad -44.4 10.08 50 -4.410 0.0002
-Neutral - Bad -19.8 7.94 50 -2.495 0.0415
-
-P value adjustment: tukey method for comparing a family of 3 estimates
-
-\hypertarget{experiment-4a}{%
-\section{Experiment 4a}\label{experiment-4a}}
-
-In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
+\hypertarget{method}{%
+\subsection{Method}\label{method}}
 
 \hypertarget{participants-1}{%
-\subsection{Participants}\label{participants-1}}
+\subsubsection{Participants}\label{participants-1}}
 
-64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
+72 college students (49 female, age = 20.17 \(\pm\) 2.08 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 33 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 1 participant's data were excluded from analysis because nearly random level of accuracy, leaving 50 participants (34 female, age = 20.26 \(\pm\) 2.35 years).
+
+\hypertarget{stimuli-and-tasks-1}{%
+\subsubsection{Stimuli and Tasks}\label{stimuli-and-tasks-1}}
+
+Three geometric shapes (triangle, square, and circle, with 3.7º × 3.7º of visual angle) were presented above a white fixation cross subtending 0.8º × 0.8º of visual angle at the center of the screen. The three shapes were randomly assigned to three labels with different moral valence: a morally bad person (\enquote{恶人}, ERen), a morally good person (\enquote{善人}, ShanRen) or a morally neutral person (\enquote{常人}, ChangRen). The order of the associations between shapes and labels was counterbalanced across participants.
+Three labels used in this experiment is selected based on the rating results from an independent survey, in which participants rated the familiarity, frequency, and concreteness of eight different words online. Of the eight words, three of them are morally positive (HaoRen, ShanRen, Junzi), two of them are morally neutral (ChangRen, FanRen), and three of them are morally negative (HuaiRen, ERen, LiuMang). An independent sample consist of 35 participants (22 females, age 20.6 ± 3.11) were recruited to rate these words. Based on the ratings (see Figure 1), we selected ShanRen, ChangRen, and ERen to represent morally positve, neutral, and negative person.
+
+Table 1b-1. Ratings of familarity, frequencies and concreteness for different labels that share similar meanings (n = 35).
+Label Familiarity frequencies concreteness
+HaoRen 6.31 (1.01) 5.85 (1.24) 4.71 (1.83)
+HuaiRen 6 (1.44) 4.68 (1.85) 4.51 (1.96)
+ChangRen 5.49 (1.41) 4.4 (1.63) 4.28 (1.88)
+ShanReng 4.89 (1.42) 2.8 (1.6) 4.57 (1.59)
+Eren 5.08 (1.65) 2.69 (1.85) 4.6 (1.59)
+
+\hypertarget{procedure-1}{%
+\subsubsection{Procedure}\label{procedure-1}}
+
+For participants from both Tsinghua community and Wenzhou community, the procedure in the current study was exactly same as in experiment 1a. For participants in Tsinghua community, they finished a survey suite include personal distance, objective and subjective SES, belief in just world (Wu et al., 2011), disgust senstivity scale (谭永红 et al., 2007), trait justice (Wu et al., 2014), and cognitive reflection test (Frederick, 2005). For participants from Wenzhou community, they finished exactly the same questionnaires as the participants from Wenzhou University in experiment 1a.
+\#\# Analysis
+Data was analyzed as in experiment 1a.
 
 \hypertarget{results-1}{%
 \subsection{Results}\label{results-1}}
 
 \hypertarget{analaysis-of-d-prime.-1}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
+
+We conducted a single factor (Valence: good, neutral, bad) repeated measure ANOVA:
+
+We found the effect of Valence (\(F(2, 98) = 13.54\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .051\)).
+
+We further examined the effect of valence.
+
+contrast estimate SE df t.ratio p.value
+Good - Neutral 0.415 0.0743 49 5.583 \textless{}.0001
+Good - Bad 0.185 0.0904 49 2.052 0.1107
+Neutral - Bad -0.229 0.0739 49 -3.106 0.0087
+
+P value adjustment: tukey method for comparing a family of 3 estimates
+The Good condition (1.9 \(\pm\) 0.104) is great than Netural condition (1.49 \(\pm\) 0.1, t(49) = 5.583, p \textless{} 0.001, Cohen's d = 0.415), Neutral and bad condition (1.71 \(\pm\) 0.11, t(49) = -3.106, p = 0.008, Cohen'd = -0.229). This is no-significant difference between Good and bad conidition, t(49) = 2.05, p = 0.11.
+
+\hypertarget{experiment-4a}{%
+\section{Experiment 4a}\label{experiment-4a}}
+
+In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
+
+\hypertarget{participants-2}{%
+\subsection{Participants}\label{participants-2}}
+
+64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
+
+\hypertarget{results-2}{%
+\subsection{Results}\label{results-2}}
+
+\hypertarget{analaysis-of-d-prime.-2}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -393,14 +438,14 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-2}{%
-\subsection{Participants}\label{participants-2}}
+\hypertarget{participants-3}{%
+\subsection{Participants}\label{participants-3}}
 
-\hypertarget{results-2}{%
-\subsection{Results}\label{results-2}}
+\hypertarget{results-3}{%
+\subsection{Results}\label{results-3}}
 
-\hypertarget{analaysis-of-d-prime.-2}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
+\hypertarget{analaysis-of-d-prime.-3}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -480,8 +525,8 @@ Neutral - Bad == 0 0.0668 0.0872 0.77 0.45
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{results-3}{%
-\section{Results}\label{results-3}}
+\hypertarget{results-4}{%
+\section{Results}\label{results-4}}
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -520,11 +565,17 @@ Harrell Jr, F. E., Charles Dupont, \& others. (2019). \emph{Hmisc: Harrell misce
 \leavevmode\hypertarget{ref-R-purrr}{}%
 Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming tools}. Retrieved from \url{https://CRAN.R-project.org/package=purrr}
 
+\leavevmode\hypertarget{ref-R-ggstance}{}%
+Henry, L., Wickham, H., \& Chang, W. (2018). \emph{Ggstance: Horizontal 'ggplot2' components}. Retrieved from \url{https://CRAN.R-project.org/package=ggstance}
+
 \leavevmode\hypertarget{ref-R-TH.data}{}%
 Hothorn, T. (2019). \emph{TH.data: TH's data archive}. Retrieved from \url{https://CRAN.R-project.org/package=TH.data}
 
 \leavevmode\hypertarget{ref-R-multcomp}{}%
 Hothorn, T., Bretz, F., \& Westfall, P. (2008). Simultaneous inference in general parametric models. \emph{Biometrical Journal}, \emph{50}(3), 346--363.
+
+\leavevmode\hypertarget{ref-R-ggformula}{}%
+Kaplan, D., \& Pruim, R. (2019). \emph{Ggformula: Formula interface to the grammar of graphics}. Retrieved from \url{https://CRAN.R-project.org/package=ggformula}
 
 \leavevmode\hypertarget{ref-R-MBESS}{}%
 Kelley, K. (2018). \emph{MBESS: The mbess r package}. Retrieved from \url{https://CRAN.R-project.org/package=MBESS}
@@ -546,6 +597,12 @@ Patil, I., \& Powell, C. (2018). \emph{Ggstatsplot: 'Ggplot2' based plots with s
 
 \leavevmode\hypertarget{ref-R-coda}{}%
 Plummer, M., Best, N., Cowles, K., \& Vines, K. (2006). CODA: Convergence diagnosis and output analysis for mcmc. \emph{R News}, \emph{6}(1), 7--11. Retrieved from \url{https://journal.r-project.org/archive/}
+
+\leavevmode\hypertarget{ref-R-mosaicData}{}%
+Pruim, R., Kaplan, D., \& Horton, N. (2018). \emph{MosaicData: Project mosaic data sets}. Retrieved from \url{https://CRAN.R-project.org/package=mosaicData}
+
+\leavevmode\hypertarget{ref-R-mosaic}{}%
+Pruim, R., Kaplan, D. T., \& Horton, N. J. (2017). The mosaic package: Helping students to 'think with data' using r. \emph{The R Journal}, \emph{9}(1), 77--102. Retrieved from \url{https://journal.r-project.org/archive/2017/RJ-2017-024/index.html}
 
 \leavevmode\hypertarget{ref-R-base}{}%
 R Core Team. (2018). \emph{R: A language and environment for statistical computing}. Vienna, Austria: R Foundation for Statistical Computing. Retrieved from \url{https://www.R-project.org/}
