--- a/r-references.bib
+++ b/r-references.bib
@@ -268,3 +268,34 @@
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+@Manual{R-ggformula,
+  title = {ggformula: Formula Interface to the Grammar of Graphics},
+  author = {Daniel Kaplan and Randall Pruim},
+  year = {2019},
+  note = {R package version 0.9.1},
+  url = {https://CRAN.R-project.org/package=ggformula},
+}
+@Manual{R-ggstance,
+  title = {ggstance: Horizontal 'ggplot2' Components},
+  author = {Lionel Henry and Hadley Wickham and Winston Chang},
+  year = {2018},
+  note = {R package version 0.3.1},
+  url = {https://CRAN.R-project.org/package=ggstance},
+}
+@Article{R-mosaic,
+  author = {Randall Pruim and Daniel T Kaplan and Nicholas J Horton},
+  title = {The mosaic Package: Helping Students to 'Think with Data' Using R},
+  journal = {The R Journal},
+  volume = {9},
+  number = {1},
+  pages = {77--102},
+  year = {2017},
+  url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+@Manual{R-mosaicData,
+  title = {mosaicData: Project MOSAIC Data Sets},
+  author = {Randall Pruim and Daniel Kaplan and Nicholas Horton},
+  year = {2018},
+  note = {R package version 0.17.0},
+  url = {https://CRAN.R-project.org/package=mosaicData},
+}
